newscaster/k8s/fetcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fetcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fetcher
  template:
    metadata:
      labels:
        app: fetcher
    spec:
      containers:
      - name: fetcher
        image: newscaster-fetcher:latest
        imagePullPolicy: Never
