newscaster/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: us-central1-docker.pkg.dev/newscaster-487321/newscaster-repo/newscaster-api:gke-20260408-2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "250m"
            memory: "384Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        volumeMounts:
        - name: gcp-secret
          mountPath: /var/secrets/google
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 3
          failureThreshold: 3
        ports:
        - containerPort: 8000
      volumes:
      - name: gcp-secret
        secret:
          secretName: gcp-sa-key

---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000
