newscaster/k8s/prometheus.yaml
# -------------------------------------------------------
# PROMETHEUS DEPLOYMENT
# -------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prom-config
          mountPath: /etc/prometheus
      volumes:
      - name: prom-config
        configMap:
          name: prometheus-config

---
# -------------------------------------------------------
# PROMETHEUS SERVICE
# -------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 32090

---
# -------------------------------------------------------
# REDIS EXPORTER
# -------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
      - name: redis-exporter
        image: oliver006/redis_exporter
        args: ["--redis.addr=redis:6379"]
        ports:
        - containerPort: 9121

---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
spec:
  selector:
    app: redis-exporter
  ports:
  - port: 9121
    targetPort: 9121

---
# -------------------------------------------------------
# RABBITMQ EXPORTER
# -------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-exporter
  template:
    metadata:
      labels:
        app: rabbitmq-exporter
    spec:
      containers:
      - name: rabbitmq-exporter
        image: kbudde/rabbitmq-exporter
        ports:
        - containerPort: 9419
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-exporter
spec:
  selector:
    app: rabbitmq-exporter
  ports:
  - port: 9419
    targetPort: 9419
