newscaster/k8s/summarizer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summarizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summarizer
  template:
    metadata:
      labels:
        app: summarizer
    spec:
      containers:
      - name: summarizer
        image: newscaster-summarizer:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: summarizer
spec:
  selector:
    app: summarizer
  ports:
  - port: 9090
    targetPort: 9090
