newscaster/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newscaster-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "newscaster-web-ip"
    networking.gke.io/managed-certificates: "newscaster-managed-cert"
    networking.gke.io/v1beta1.FrontendConfig: "newscaster-frontend-config"
spec:
  ingressClassName: gce
  rules:
    - host: 34-8-253-132.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
